--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@nuxtjs/vuetify": "^0.4.2",
     "nuxt": "^1.0.0",
     "vue-parallaxy": "^1.1.1"
   },
