--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ cache:
 
 branches:
   only:
-  - master
+    - master
 
 install:
-  - npm install
-  - npm run generate
+  - yarn build
 
 script:
   - echo "Skipping tests"
