specify elm version and add yarn

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
+elm:
+  - elm0.19.0
 node_js:
-  - "8"
+  - "10"
 
 cache:
+  yarn: true
   directories:
     - "node_modules"
 
