--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "parcel src/index.html --out-dir dist",
-        "build": "parcel build src/index.html --out-dir dist"
+        "build": "parcel build src/index.html --out-dir dist --public-url ./"
     },
     "devDependencies": {
         "elm-hot": "^1.0.1",
