--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "elm-hot": "^1.0.1",
         "node-elm-compiler": "^5.0.1",
-        "parcel-bundler": "^1.11.0"
+        "parcel-bundler": "^1.11.0",
+        "sass": "^1.15.3"
     }
 }
