--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
         "elm-hot": "^1.0.1",
         "node-elm-compiler": "^5.0.1",
         "parcel-bundler": "^1.11.0",
+        "parcel-plugin-url-loader": "^1.3.1",
         "sass": "^1.15.3"
+    },
+    "url-loader": {
+        "exts": ["jpg", "jpeg", "png", "gif", "svg"],
+        "limit": 10240
     }
 }
