--- a/package.json
+++ b/package.json
@@ -11,5 +11,20 @@
         "parcel-bundler": "^1.11.0",
         "parcel-plugin-url-loader": "^1.3.1",
         "sass": "^1.15.3"
+    },
+    "dependencies": {
+        "css-loader": "^2.1.1",
+        "elm-webpack-loader": "^5.0.0",
+        "file-loader": "^3.0.1",
+        "global": "^4.3.2",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.11.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "url-loader": "^1.1.2",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.2.1"
     }
 }
