--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "parcel src/index.html --out-dir dist",
-        "build": "parcel build src/index.html --out-dir dist --public-url ./"
+        "start": "webpack-dev-server",
+        "build": "webpack"
     },
     "devDependencies": {
         "elm-hot": "^1.0.1",
